fix dice offcenter & commit message width

--- a/src/App.scss
+++ b/src/App.scss
@@ -41,7 +41,7 @@ body {
 	margin-top: 100px;
 	padding: 20px;
 	height: fit-content;
-	width: fit-content;
+	max-width: 80dvw;
 	background-color: rgb(150, 150, 150);
 	border-top-left-radius: 15px;
 	border-top-right-radius: 15px;
